# anta-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  anta.env  inventory.yml  requirements.txt
.github/: markdownlint.yaml
1-hello-world/: README.md  catalog.yml
1-network-tests/: README.md  inventory.yml  nrfu.yml  nrfu_custom.yml
2-custom-module/: PACKAGE-README.md  README.md  nrfu_custom.yml  pyproject.toml
2-custom-module/custom/: example.py
2-custom-test/: README.md  catalog.yml
2-custom-test/custom/: vlan.py
3-anta-in-avd/: README.md
3-anta-in-avd/custom_anta_catalogs/: LAB.yml  leaf1.yml
avd/: ansible.cfg  inventory.yml
avd/documentation/devices/: leaf1.md  leaf2.md  leaf3.md  leaf4.md  spine1.md  spine2.md
avd/documentation/fabric/: ATD_FABRIC-documentation.md  FABRIC-documentation.md
avd/group_vars/: CONNECTED_ENDPOINTS.yml  FABRIC.yml  LAB.yml  NETWORK_SERVICES.yml  all.yml
avd/intended/configs/: leaf1.cfg  leaf2.cfg  leaf3.cfg  leaf4.cfg  spine1.cfg  spine2.cfg
avd/intended/structured_configs/: leaf1.yml  leaf2.yml  leaf3.yml  leaf4.yml  spine1.yml  spine2.yml
avd/playbooks/: build.yml  validate.yml
containerlab/: topology.clab.drawio  topology.clab.yml
containerlab-topology/: topology.yml
containerlab/configs/: host1.cfg  host2.cfg
docs/: avd-provisioning.md  installation.md
